<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/mainlayout"
    tools:context="rys.calculogalonaje2.app.MainActivity"
    android:stretchColumns="1">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">
            <TextView
                android:text="@string/PesoNetoLabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:id="@+id/pesoneto"/>
            <EditText
                android:layout_marginLeft="5dp"
                android:layout_column="1"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtPesoNeto"
                android:hint="@string/PesoNetoHint"/>
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">
            <TextView
                android:layout_column="0"
                android:text="@string/APILabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/api" />
            <EditText
                android:layout_marginLeft="5dp"
                android:layout_column="1"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtAPI"
                android:hint="@string/APIHint"
                android:digits="0123456789."/>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="5dp">
        <Button
            android:text="@string/CalcularGalonBoton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCalcularGalon"
            android:layout_span="2"/>
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">
        <TextView
            android:layout_column="0"
            android:text="@string/GalonesLabel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/galones" />
        <TextView
            android:layout_column="1"
            android:text="0.00"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtGalones" />
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">
        <TextView
            android:layout_column="0"
            android:text="@string/BarrilesLabel"
            android:id="@+id/barriles"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_column="1"
            android:text="0.00"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtBarriles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">
        <com.google.android.gms.ads.AdView
            android:layout_span="2"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/UnitIDAdMob">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>
</TableLayout>

